--- a/RepTheoryTQFT/RepTheoryTQFT.tex
+++ b/RepTheoryTQFT/RepTheoryTQFT.tex
@@ -10,6 +10,8 @@
 \usepackage{mathrsfs}
 \usepackage{amsthm}
 \usepackage{mathpazo}
+%\usepackage{charter} %another font
+%\usepackage{eulervm} %Vakil font
 \usepackage{yfonts}
 \usepackage{enumitem}
 \usepackage{mathrsfs}
